Added Nick as author

--- a/jors2016.tex
+++ b/jors2016.tex
@@ -17,20 +17,20 @@
 \author[2]{Tom Crick}
 \author[3]{Andrew Joyce-Gibbons}
 \author[4]{Gary Beauchamp}
-% \author[5]{}
+\author[5]{Nick Young}
 % affiliation
 \affil[1,3]{School of Education, Durham University, UK}
 \affil[2]{Department of Computing \& Information Systems, Cardiff
   Metropolitan University, UK}
 % \affil[3]{}
-\affil[4]{School of Education, Cardiff Metropolitan University, UK}
+\affil[4,5]{School of Education, Cardiff Metropolitan University, UK}
 % \affil[5]{}
 % emails
 \affil[1]{\protect\url{j.a.mcnaughton@durham.ac.uk}}
 \affil[2]{\protect\url{tcrick@cardiffmet.ac.uk}}
 \affil[3]{\protect\url{andrew.joyce-gibbons@durham.ac.uk}}
 \affil[4]{\protect\url{gbeauchamp@cardiffmet.ac.uk}}
-% \affil[5]{\protect\url{}}
+\affil[5]{\protect\url{nyoung@cardiffmet.ac.uk}}
 
 \renewcommand\Authands{ and }
 \def\UrlBreaks{\do\/\do-}
